# catlock

./: .gitignore  CHANGELOG.md  meson.build  notes.md  readme.md  vala-language-server.json
data/: com.github.darkoverlordofdata.catlock.appdata.xml.in  com.github.darkoverlordofdata.catlock.cron  com.github.darkoverlordofdata.catlock.desktop  com.github.darkoverlordofdata.catlock.desktop.desktop  com.github.darkoverlordofdata.catlock.desktop.in  com.github.darkoverlordofdata.catlock.gschema.xml  gschemas.compiled  meson.build
meson/: post_install.py
scripts/: freebsd-schema.py
src/: CatLock.vala  Display.vala  Holidays.vala  MainWindow copy.vala  MainWindow.vala  Panel.vala  Parameters.vala
src/Plugins/: ClockPlugin.vala  IPlugin.vala  InfoPlugin.vala  WeatherPlugin.vala
src/calendar/: Calendar.vala  CalendarNode.vala  Event.vala  Holidays.vala  Rule.vala
src/iCal/: Calendar.vala  CalendarNode.vala  DayOfWeek.vala  EventNode.vala  RRule.vala
test/: MainWindow copy.vala  main  main.vala  plugin-interface.c  plugin-interface.vala  plugin.c  plugin.vala  weather.c  weather.vala
vapi/: config.vapi  imlib2.vapi  user.vapi  x11.vapi  x11.vapi.old
